--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "axios": "^0.20.0",
+    "gh-pages": "^3.1.0",
+    "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.3"
@@ -13,8 +16,12 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "deploy":"gh-pages -d bulid",
+    "predeploy" : "npm run build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
+    
+
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -30,5 +37,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "homepag" : "https://github.io/JinSungYoon/Movie-App-2020/"
 }
